--- a/modules/ansible/ubuntu-playbook.yaml
+++ b/modules/ansible/ubuntu-playbook.yaml
@@ -32,7 +32,7 @@
       block: "{{ ansible_user }}  ALL=(ALL) NOPASSWD: ALL"
     become: yes
   
-  - name: set hostname
+  - name: set the hostname
     hostname:
       name: "{{hostname}}"
     become: yes
